src/test/deca/codegen/valid/literal-float.deca
// Description:
//    Literal float
//
// Resultats:
//    
//
// Historique:
//    cree le 06/01/2023

{
    1.0;
}