src/test/deca/codegen/invalid/divide-by-zero.deca
// Description:
//    Division par 0
//
// Resultats:
//    Execution error
//    Error : division by zero.
//
// Historique:
//    cree le 15/01/2023

{
        1/0;
}